--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: >
   medianas empresas. Impresora fiscal, factura electrónica, stock,
   cuentas corrientes, multiusuario, ¡y más!
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: https://dev.multinexo.com # the base hostname & protocol for your site
+url: http://multinexo.github.io/dev.multinexo.com/ # the base hostname & protocol for your site
 git_address: https://github.com/multinexo
-git_edit_address: https://github.com/multinexo/docs/blob/gh-pages
+git_edit_address: https://github.com/multinexo/dev.multinexo.com/gh-pages
 
 # Build settings
 markdown: kramdown
