--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: http://multinexo.github.io/dev.multinexo.com/ # the base hostname & protocol for your site
 git_address: https://github.com/multinexo
-git_edit_address: https://github.com/multinexo/dev.multinexo.com/gh-pages
+git_edit_address: https://github.com/multinexo/dev.multinexo.com/
 
 # Build settings
 markdown: kramdown
