--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,24 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1
     steps:
-      - run: bundle install && bundle exec jekyll build
+      - checkout
+      - run:
+          name: Install dependencies
+          command: bundle install
+      - run:
+          name: Build peroject
+          command: bundle exec jekyll build
   deploy-to-ghpages:
     docker:
       - image: circleci/ruby:2.5.1
     steps:
       - checkout
-      - run: bundle install && bundle exec jgd
+      - run:
+          name: Install dependencies
+          command: bundle install
+      - run:
+          name: Publish to Github Pages
+          command: bundle exec jgd
 workflows:
   version: 2
   build:
