--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,11 @@ jobs:
           name: Install dependencies
           command: bundle install
       - run:
+          name: Git user config
+          command: git config --global user.name "BB pipeline" && git config --global user.email "pipeline@reyesoft.com"
+      - run:
           name: Publish to Github Pages
-          command: bundle exec jgd
+          command: bundle exec jgd -r v2.0
 workflows:
   version: 2
   build:
