--- a/site/.gitignore
+++ b/site/.gitignore
@@ -5,3 +5,19 @@ node_modules/
 ../.idea/workspace.xml
 .idea/vcs.xml
 .idea/markdown-navigator.xml
+
+.circleci
+_edition_files
+_includes
+_layouts
+_sass
+css
+fonts
+js
+404.html
+_config.copy.yml
+allposts.html
+Gemfile
+Gemfile.lock
+index.html
+search.json
